<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:orientation="vertical" >

    <Button
        android:id="@+id/parte1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="parte1"
        android:text="@string/parte_1" />

    <Button
        android:id="@+id/parte2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="parte2"
        android:text="@string/parte_2" />
    
    <Button
        android:id="@+id/parte3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="parte3"
        android:text="@string/parte_3" />
    
    <Button
        android:id="@+id/parte4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="parte4"
        android:text="@string/parte_4" />
          
	<Button
        android:id="@+id/parte5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="parte5"
        android:text="@string/parte_5" />        

</LinearLayout>